
  * lib/{Lab/Package,Lintian/Processable*}.pm:
    + [NT] Added files to assist in package grouping.
  * lib/Lintian/Command/Simple.pm:
    + [NT] Added support for chanding directory before running the
      command.
  * lib/Lintian/Collect.pm,lib/Lintian/Collect/*.pm:
    + [NT] Removed assumption that all the information handled by
      these are available in the current directory.

  * private/runtests:
    + [NT] Added support for dumping build logs if a test fails.
      (Closes: #621658)
    + [NT] Disabled pkgbinarymangler during tests.  (Closes: #621681)

  * unpack/unpack-{binpkg,changes}-l1:
    + [NT] Removed unpack scripts for binpkg and changes as these have
      been replaced by collections.

 -- Niels Thykier <niels@thykier.net>  Thu, 07 Apr 2011 19:00:59 +0200

lintian (2.5.0~rc2) unstable; urgency=low

  Uploading to unstable.

  * Summary of tag changes:
    + Added:
      - unknown-multi-arch-value
      - package-needs-versioned-debhelper-build-depends
    + Removed:
      - old-versioned-python-dependency

  * checks/binaries:
    + [ADB] Update binary-from-other-architecture's tests in line with the
      changes to filename output introduced in 2.5.0~rc1.
      (Closes: #614906)
  * checks/changes-file.desc:
    + [NT] Added oneiric as valid Ubuntu distribution.  Thanks to Benjamin
      Drung for the patch.  (Closes: #617227)
  * checks/deb-format:
    + [NT] Removed assumption that there was always a changelog in a binary
      with a data.tar.lzma member.
  * checks/debhelper:
    + [NT] Reduced package-lacks-versioned-build-depends-on-debhelper to a
      pedantic tag.  It is now only emitted for debhelper compat levels of
      7 or less, since even oldstable ships with debhelper 7.
    + [NT] Added package-needs-versioned-debhelper-build-depends, which
      replaces package-lacks-versioned-build-depends-on-debhelper old
      task of warning if a missing versioned depends may lead to a build